--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,16 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<title>Vite + React + TS</title>
 	</head>
 	<body style="height: 100vh; width: 100vw; margin: 0">
 		<div id="root"></div>
-		<div id="map" style="height: 100%; width: 100%"></div>
-
-		<script type="module" src="/src/geoserver.js"></script>
+		<!-- <div id="map" style="height: 100%; width: 100%"></div> -->
+		<script
+			src="https://kit.fontawesome.com/e82e7b8225.js"
+			crossorigin="anonymous"></script>
+		<!-- <script type="module" src="/src/geoserver.js"></script> -->
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
