--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,9 @@
 	<body style="height: 100vh; width: 100vw; margin: 0">
 		<div id="root"></div>
 		<!-- <div id="map" style="height: 100%; width: 100%"></div> -->
-		<script
+		<!-- <script
 			src="https://kit.fontawesome.com/e82e7b8225.js"
-			crossorigin="anonymous"></script>
+			crossorigin="anonymous"></script> -->
 		<!-- <script type="module" src="/src/geoserver.js"></script> -->
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
