--- a/mail.html
+++ b/mail.html
@@ -6,40 +6,40 @@
 		<title>AQI Notification</title>
 		<style>
 			body {
-				font-family: Arial, sans-serif;
-				background-color: #f4f4f4;
-				margin: 0;
-				padding: 20px;
+			    font-family: Arial, sans-serif;
+			    background-color: #f4f4f4;
+			    margin: 0;
+			    padding: 20px;
 			}
 			.container {
-				max-width: 600px;
-				background: #ffffff;
-				padding: 20px;
-				border-radius: 8px;
-				box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-				text-align: center;
+			    max-width: 600px;
+
+			    padding: 20px;
+			    border-radius: 8px;
+			    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			    text-align: center;
 			}
 			.aqi-box {
-				font-size: 24px;
-				font-weight: bold;
-				padding: 15px;
-				border-radius: 5px;
-				color: #fff;
-				margin: 10px 0;
-				background-color: #ffff00;
+			    font-size: 24px;
+			    font-weight: bold;
+			    padding: 15px;
+			    border-radius: 5px;
+
+			    margin: 10px 0;
+			    background-color: ${color};
 			}
 			.aqi-box span {
-				color: #fff;
+
 			}
 			.recommendation {
-				font-size: 16px;
-				margin-top: 15px;
-				color: #333;
+			    font-size: 16px;
+			    margin-top: 15px;
+			    color: #333;
 			}
 			.footer {
-				margin-top: 20px;
-				font-size: 12px;
-				color: #777;
+			    margin-top: 20px;
+			    font-size: 12px;
+			    color: #777;
 			}
 		</style>
 	</head>
@@ -47,12 +47,13 @@
 		<div class="container">
 			<h2>Air Quality Notification</h2>
 			<p>The current Air Quality Index (AQI) in your area is:</p>
-			<div class="aqi-box"><span>59</span></div>
-			<p class="recommendation">
-				Air quality is acceptable. However, there may be a risk for some people,
-				particularly those who are unusually sensitive to air pollution.
-			</p>
-			<div class="footer"><p>Stay safe and take necessary precautions.</p></div>
+			<div class="aqi-box">
+				<span>${aqi_index}</span>
+			</div>
+			<p class="recommendation">${recommendation}</p>
+			<div class="footer">
+				<p>Stay safe and take necessary precautions.</p>
+			</div>
 		</div>
 	</body>
 </html>
